--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "Number of Hours Operation: 8784\n",
-      "Capacity Factor of Wind Farm: 36.70%\n",
+      "Capacity Factor of Wind Farm:           36.70 %\n",
+      "Capacity of Wind Farm:          15,210 kW\n",
       "Operating mode percentages:\n",
       "  Mode 1: 25.15%\n",
       "  Mode 2: 34.88%\n",
