--- a/main.ipynb
+++ b/main.ipynb
@@ -11,18 +11,19 @@
      "text": [
       "Number of Hours Operation: 8784\n",
       "Capacity Factor of Wind Farm:           36.70 %\n",
-      "Capacity of Wind Farm:          15,210 kW\n",
+      "Capacity of Wind Farm:         106,470 kW\n",
+      "Peak air‐mass flow: 184.27 kg/s\n",
       "Operating mode percentages:\n",
-      "  Mode 1: 25.15%\n",
-      "  Mode 2: 34.88%\n",
-      "  Mode 3: 25.65%\n",
-      "  Mode 4: 6.08%\n",
-      "  Mode 5: 8.24%\n",
-      "Total revenue without storage: €   2,849,297.26\n",
-      "Total revenue from storage:    €   1,215,088.56\n",
-      "Total revenue from grid:       €   2,348,508.03\n",
-      "Grand total revenue:           €   3,563,596.60\n",
-      "Annual saving from storage:    €     714,299.34\n",
+      "  Mode 1: 23.39%\n",
+      "  Mode 2: 53.29%\n",
+      "  Mode 3: 8.99%\n",
+      "  Mode 4: 5.75%\n",
+      "  Mode 5: 8.57%\n",
+      "Total revenue without storage: €  19,945,080.81\n",
+      "Total revenue from storage:    €   1,718,239.52\n",
+      "Total revenue from grid:       €  19,013,571.23\n",
+      "Grand total revenue:           €  20,731,810.75\n",
+      "Annual saving from storage:    €     786,729.93\n",
       "Updated CSV saved successfully.\n"
      ]
     }
